--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,9 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-freemarker')
 	compile('org.springframework.boot:spring-boot-starter-web')
-	compile("org.springframework.boot:spring-boot-starter-aop")
+	compile('org.springframework.boot:spring-boot-starter-aop')
+
+	compile('org.projectlombok:lombok:1.16.10')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
